--- a/amoeba-mysql/build.xml
+++ b/amoeba-mysql/build.xml
@@ -36,13 +36,11 @@
 
   	<target name="dist" depends="compile">
         <mkdir dir="${deploy.dir}"/>
-
+		<echo>${classes.dir}</echo>
         <jar destfile="${deploy.dir}/${app.name}-${amoeba.version}.jar" index="true">
-            <fileset dir="${classes.dir}" casesensitive="yes">
-                <exclude name="*/.svn/*"/>
-                <exclude name="**/mysql/**"/>
-            	<exclude name="*.class"/>
-            </fileset>
+        	
+            <fileset dir="${classes.dir}" casesensitive="yes"/>
+               
         </jar>
     </target>
 </project>
