--- a/trunk/amoeba/build.xml
+++ b/trunk/amoeba/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="GB2312"?>
 <project default="dist" name="amoeba" basedir=".">
-  	<property name="amoeba.version"     value="0.21"/>
+  	<property name="version"     value="0.21"/>
   	<property name="app.name"     value="amoeba"/>
   	<property name="deploy.dir"   value="dist"/>
   	<property name="savedoc.dir"  value="docs"/>
@@ -40,7 +40,7 @@
   	<target name="dist" depends="compile">
         <mkdir dir="${deploy.dir}"/>
 		
-        <jar destfile="${deploy.dir}/${app.name}-${amoeba.version}.jar" index="true">
+        <jar destfile="${deploy.dir}/${app.name}-${version}.jar" index="true">
             <fileset dir="${classes.dir}" casesensitive="yes"/>
         </jar>
     </target>
