--- a/amoeba-oracle/build.xml
+++ b/amoeba-oracle/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="GB2312"?>
-<project default="dist" name="amoeba-mysql" basedir=".">
+<project default="dist" name="amoeba-oracle" basedir=".">
   	<property name="version"     value="0.1"/>
   	<property name="app.name"     value="amoeba-oracle"/>
   	<property name="deploy.dir"   value="dist"/>
@@ -10,7 +10,7 @@
   	<path id="classpath">
   		<pathelement location="${classes.dir}"/>
     	<fileset dir="${libs.dir}" includes="**/*.jar"/>
-    	<fileset dir="${user.dir}" includes="**/*.jar"/>
+    	<fileset dir="${project.libs.dir}" includes="**/*.jar"/>
   	</path>
 		
 	<target name="compile" depends="prepare">
