--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="GB2312"?>
 <project default="mysql" name="AmoebaBuilder" basedir="." xmlns:artifact="urn:maven-artifact-ant">
-  	<property name="version"     value="0.30"/>
+  	<property name="amoeba.mysql.version"     value="0.30"/>
+  	<property name="amoeba.aladdin.version"     value="0.1"/>
   	<property name="app.name"     value="amoeba"/>
   	<property name="deploy.dir"   value="dist"/>
   	<property name="savedoc.dir"  value="docs"/>
@@ -85,7 +86,7 @@
     
    <target name="mysql" depends="distclean,prepare,distcleanprojects,distprojects">
 
-	    <tar longfile="gnu" destfile="amoeba-mysql-${version}.tar.gz" compression="gzip">
+	    <tar longfile="gnu" destfile="amoeba-mysql-${amoeba.mysql.version}.tar.gz" compression="gzip">
 		    <tarfileset dir="${deploy.dir}" mode="755">
 		        <include name="bin/**"/>
 		    	<exclude name="*/.svn/*"/>
@@ -113,7 +114,7 @@
 	        </tarfileset>
 	    </tar>
 		
-		<zip destfile="amoeba-mysql-${version}.zip">
+		<zip destfile="amoeba-mysql-${amoeba.mysql.version}.zip">
 		    <zipfileset dir="${deploy.dir}">
 		        <include name="bin/**"/>
 		    	<exclude name="*/.svn/*"/>
@@ -143,4 +144,70 @@
 		    
 	    </zip>
    </target>
+   
+   <target name="aladdin" depends="distclean,prepare,distcleanprojects,distprojects">
+
+	    <tar longfile="gnu" destfile="amoeba-aladdin-${amoeba.aladdin.version}.tar.gz" compression="gzip">
+		    <tarfileset dir="${deploy.dir}" mode="755">
+		        <include name="bin/**"/>
+		    	<exclude name="*/.svn/*"/>
+		    </tarfileset>
+	    	
+		    <tarfileset dir="${deploy.dir}">
+		        <include name="lib/**"/>
+		    	<include name="doc/**"/>
+		    	<include name="conf/**"/>
+		    	<include name="src/**"/>
+		    	<exclude name="*/.svn/*"/>
+		    	<exclude name="bin/*"/>
+		    	<include name="*.*"/>
+		    </tarfileset>
+	        <tarfileset dir="amoeba">
+	        	<exclude name="*/.svn/*"/>
+	        	<include name="src/java/**"/>
+	        </tarfileset>
+			<!--
+			<tarfileset dir="amoeba-aladdin">
+	        	<exclude name="*/.svn/*"/>
+	        	<include name="src/java/**"/>
+	        </tarfileset>
+	        -->
+	        <tarfileset dir="build/build-aladdin">
+	        	<exclude name="*/.svn/*"/>
+	        </tarfileset>
+	    </tar>
+		
+		<zip destfile="amoeba-aladdin-${amoeba.aladdin.version}.zip">
+		    <zipfileset dir="${deploy.dir}">
+		        <include name="bin/**"/>
+		    	<exclude name="*/.svn/*"/>
+		    </zipfileset>
+	    	
+		    <zipfileset dir="${deploy.dir}">
+		        <include name="lib/**"/>
+		    	<include name="doc/**"/>
+		    	<include name="conf/**"/>
+		    	<include name="src/**"/>
+		    	<exclude name="*/.svn/*"/>
+		    	<exclude name="bin/*"/>
+		    	<include name="*.*"/>
+		    </zipfileset>
+		     <zipfileset dir="amoeba">
+	        	<exclude name="*/.svn/*"/>
+	        	<include name="src/java/**"/>
+	        </zipfileset>
+			<!--
+			<tarfileset dir="amoeba-aladdin">
+	        	<exclude name="*/.svn/*"/>
+	        	<include name="src/java/**"/>
+	        </tarfileset>
+	        -->
+	        
+	        <zipfileset dir="build/build-aladdin">
+	        	<exclude name="*/.svn/*"/>
+	        </zipfileset>
+		    
+	    </zip>
+   </target>
+   
 </project>
