--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,7 @@
     <file name="build/etc/lib/junit-4.3.jar"/>
     <file name="build/etc/lib/log4j-1.2.12.jar"/>
   	<file name="build/etc/lib/jdbc4_part.jar" />
+  	<file name="build/etc/lib/commons-digester-1.8.jar" />
   </filelist>
   
   <filelist dir="." id="bin.files">
