--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="GB2312"?>
 <project default="mysql" name="AmoebaBuilder" basedir="." xmlns:artifact="urn:maven-artifact-ant">
-  	<property name="amoeba.mysql.version"     value="1.1.0-BETA"/>
+  	<property name="amoeba.mysql.version"     value="1.2.0-BETA"/>
   	<property name="amoeba.aladdin.version"     value="1.0.0-BETA"/>
   	<property name="app.name"     value="amoeba"/>
   	<property name="deploy.dir"   value="dist"/>
@@ -102,6 +102,7 @@
 		    	<include name="src/**"/>
 		    	<exclude name="*/.svn/*"/>
 		    	<exclude name="bin/*"/>
+		    	<exclude name="amoeba-aladdin*"/>
 		    	<include name="*.*"/>
 		    </tarfileset>
 	        <tarfileset dir="amoeba">
@@ -131,6 +132,7 @@
 		    	<exclude name="*/.svn/*"/>
 		    	<exclude name="bin/*"/>
 		    	<include name="*.*"/>
+		    	<exclude name="amoeba-aladdin*"/>
 		    </zipfileset>
 		     <zipfileset dir="amoeba">
 	        	<exclude name="*/.svn/*"/>
