--- a/branches/struct_2010-01-14/amoeba-mysql/build.xml
+++ b/branches/struct_2010-01-14/amoeba-mysql/build.xml
@@ -57,7 +57,7 @@
 	        </jar>
 	        <jar destfile="${deploy.dir}/${app.name}-test-${version}.jar" index="true">
 	            <fileset dir="${classes.dir}" casesensitive="yes">
-	            	<include name="**/test/*"/>
+	            	<include name="**/test/**/*"/>
 	            </fileset>
 	        </jar>
 	    </target>
