--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,8 @@
   	<file name="build/etc/lib/commons-digester-1.8.jar" />
   	<file name="build/etc/lib/jdbc-proxy-1.1.jar" />
   	<file name="build/etc/lib/commons-pool-1.5.4.jar" />
+  	<file name="build/etc/lib/javassist-3.7.ga.jar" />
+  	<file name="build/etc/lib/ognl-2.7.2.jar" />
   </filelist>
   
   <filelist dir="." id="bin.files">
