--- a/amoeba-mysql/build.xml
+++ b/amoeba-mysql/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="GB2312"?>
 <project default="dist" name="amoeba-mysql" basedir=".">
-  	<property name="version"     value="2.1.0-RC5"/>
+  	<property name="version"     value="2.2.0"/>
   	<property name="app.name"     value="amoeba-mysql"/>
   	<property name="deploy.dir"   value="dist"/>
   	<property name="savedoc.dir"  value="docs"/>
